fix overlapping nav bar

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,9 @@
+body{
+
+	padding-top: 50px;
+
+}
+
 .fixed-nav-bar{
 	position: fixed;
   	top: 0;
@@ -6,6 +12,7 @@
   	width: 100%;
   	height: 80px;
   	background-color: red;
+  	overflow: hidden;
 }
 
 
